@@ -186,7 +186,23 @@ static inline void skb_frag_size_sub(skb_frag_t *frag, int delta)
 	frag->size -= delta;
 }
 
-#define HAVE_HW_TIME_STAMP
+/**
+ * Note: Most embedded systems not support HW_TIME_STAMP on MAC.
+ *
+ * The skb_shared_hwtstamps field bloats skb_shared_info struct
+ * size from 160 to 184 bytes on 32-bit CPU. On machines with
+ * 32 byte L1 cache line, macro SKB_DATA_ALIGN() align size of
+ * skb_shared_info struct up to 192 bytes.
+ *
+ * We can disable unused HW_TIME_STAMP to decrease skb allocation
+ * size on 32 bytes per skb. This is very significant for Wireless
+ * MAC with 3840 bytes aggregation buffer + 96 bytes of NET_SKB_PAD.
+ * This allows fit each skb to one SLAB page 4096 bytes.
+ *
+ * To enable HW_TIME_STAMP feature, uncomment HAVE_HW_TIME_STAMP.
+ */
+
+//#define HAVE_HW_TIME_STAMP
 
 /**
  * struct skb_shared_hwtstamps - hardware time stamps
@@ -261,7 +277,9 @@ struct skb_shared_info {
 	unsigned short	gso_segs;
 	unsigned short  gso_type;
 	struct sk_buff	*frag_list;
+#ifdef HAVE_HW_TIME_STAMP
 	struct skb_shared_hwtstamps hwtstamps;
+#endif
 	__be32          ip6_frag_id;
 
 	/*
@@ -719,10 +737,12 @@ static inline unsigned int skb_end_offset(const struct sk_buff *skb)
 /* Internal */
 #define skb_shinfo(SKB)	((struct skb_shared_info *)(skb_end_pointer(SKB)))
 
+#ifdef HAVE_HW_TIME_STAMP
 static inline struct skb_shared_hwtstamps *skb_hwtstamps(struct sk_buff *skb)
 {
 	return &skb_shinfo(skb)->hwtstamps;
 }
+#endif
 
 /**
  *	skb_queue_empty - check if a queue is empty
