@@ -2027,7 +2027,9 @@ static __inline__ void
 sock_recv_timestamp(struct msghdr *msg, struct sock *sk, struct sk_buff *skb)
 {
 	ktime_t kt = skb->tstamp;
+#ifdef HAVE_HW_TIME_STAMP
 	struct skb_shared_hwtstamps *hwtstamps = skb_hwtstamps(skb);
+#endif
 
 	/*
 	 * generate control messages if
@@ -2041,11 +2043,14 @@ sock_recv_timestamp(struct msghdr *msg, struct sock *sk, struct sk_buff *skb)
 	 */
 	if (sock_flag(sk, SOCK_RCVTSTAMP) ||
 	    sock_flag(sk, SOCK_TIMESTAMPING_RX_SOFTWARE) ||
-	    (kt.tv64 && sock_flag(sk, SOCK_TIMESTAMPING_SOFTWARE)) ||
-	    (hwtstamps->hwtstamp.tv64 &&
+	    (kt.tv64 && sock_flag(sk, SOCK_TIMESTAMPING_SOFTWARE))
+#ifdef HAVE_HW_TIME_STAMP
+	 || (hwtstamps->hwtstamp.tv64 &&
 	     sock_flag(sk, SOCK_TIMESTAMPING_RAW_HARDWARE)) ||
 	    (hwtstamps->syststamp.tv64 &&
-	     sock_flag(sk, SOCK_TIMESTAMPING_SYS_HARDWARE)))
+	     sock_flag(sk, SOCK_TIMESTAMPING_SYS_HARDWARE))
+#endif
+	    )
 		__sock_recv_timestamp(msg, sk, skb);
 	else
 		sk->sk_stamp = kt;
