@@ -1741,7 +1741,9 @@ static int tpacket_rcv(struct sk_buff *skb, struct net_device *dev,
 	struct sk_buff *copy_skb = NULL;
 	struct timeval tv;
 	struct timespec ts;
+#ifdef HAVE_HW_TIME_STAMP
 	struct skb_shared_hwtstamps *shhwtstamps = skb_hwtstamps(skb);
+#endif
 
 	if (skb->pkt_type == PACKET_LOOPBACK)
 		goto drop;
@@ -1844,13 +1846,16 @@ static int tpacket_rcv(struct sk_buff *skb, struct net_device *dev,
 		h.h1->tp_snaplen = snaplen;
 		h.h1->tp_mac = macoff;
 		h.h1->tp_net = netoff;
+#ifdef HAVE_HW_TIME_STAMP
 		if ((po->tp_tstamp & SOF_TIMESTAMPING_SYS_HARDWARE)
 				&& shhwtstamps->syststamp.tv64)
 			tv = ktime_to_timeval(shhwtstamps->syststamp);
 		else if ((po->tp_tstamp & SOF_TIMESTAMPING_RAW_HARDWARE)
 				&& shhwtstamps->hwtstamp.tv64)
 			tv = ktime_to_timeval(shhwtstamps->hwtstamp);
-		else if (skb->tstamp.tv64)
+		else
+#endif
+		if (skb->tstamp.tv64)
 			tv = ktime_to_timeval(skb->tstamp);
 		else
 			do_gettimeofday(&tv);
@@ -1863,13 +1868,16 @@ static int tpacket_rcv(struct sk_buff *skb, struct net_device *dev,
 		h.h2->tp_snaplen = snaplen;
 		h.h2->tp_mac = macoff;
 		h.h2->tp_net = netoff;
+#ifdef HAVE_HW_TIME_STAMP
 		if ((po->tp_tstamp & SOF_TIMESTAMPING_SYS_HARDWARE)
 				&& shhwtstamps->syststamp.tv64)
 			ts = ktime_to_timespec(shhwtstamps->syststamp);
 		else if ((po->tp_tstamp & SOF_TIMESTAMPING_RAW_HARDWARE)
 				&& shhwtstamps->hwtstamp.tv64)
 			ts = ktime_to_timespec(shhwtstamps->hwtstamp);
-		else if (skb->tstamp.tv64)
+		else
+#endif
+		if (skb->tstamp.tv64)
 			ts = ktime_to_timespec(skb->tstamp);
 		else
 			getnstimeofday(&ts);
@@ -1893,13 +1901,16 @@ static int tpacket_rcv(struct sk_buff *skb, struct net_device *dev,
 		h.h3->tp_snaplen = snaplen;
 		h.h3->tp_mac = macoff;
 		h.h3->tp_net = netoff;
+#ifdef HAVE_HW_TIME_STAMP
 		if ((po->tp_tstamp & SOF_TIMESTAMPING_SYS_HARDWARE)
 				&& shhwtstamps->syststamp.tv64)
 			ts = ktime_to_timespec(shhwtstamps->syststamp);
 		else if ((po->tp_tstamp & SOF_TIMESTAMPING_RAW_HARDWARE)
 				&& shhwtstamps->hwtstamp.tv64)
 			ts = ktime_to_timespec(shhwtstamps->hwtstamp);
-		else if (skb->tstamp.tv64)
+		else
+#endif
+		if (skb->tstamp.tv64)
 			ts = ktime_to_timespec(skb->tstamp);
 		else
 			getnstimeofday(&ts);
